# ms_survey

./: README.md  main.py  pyproject.toml  pyrightconfig.json
data/: synthetic_responses.parquet
data/normalized/: answer_items.parquet  answers.parquet  questions.parquet  respondents.parquet
docs/superpowers/specs/: 2026-03-27-ncdn-country-dashboard-design.md  2026-03-27-static-html-dashboard-design.md
src/ms_survey/: cli.py
src/ms_survey/analytics/: __init__.py  engine.py  normalized_engine.py  question_profiles.py
src/ms_survey/dashboard/: __init__.py  app.py  runtime.py
src/ms_survey/db/: __init__.py
src/ms_survey/definition/: __init__.py  models.py  seed_ncdn_v1.py
src/ms_survey/extraction/: __init__.py  excel_parser.py  normalized_parquet.py  parquet_writer.py  pdf_parser.py
src/ms_survey/fixtures/: __init__.py
src/ms_survey/metrics/: __init__.py
src/ms_survey/privacy/: __init__.py  masking.py
src/ms_survey/responses/: __init__.py  models.py  validation.py
src/ms_survey/static_export/: __init__.py  exporter.py  html_template.py  payload_builder.py
tests/integration/: test_excel_to_dashboard_dataset.py  test_static_html_export.py
tests/unit/: test_branching_rules.py  test_dashboard_charts.py  test_excel_parser.py  test_imports.py  test_missingness_policy.py  test_normalized_engine.py  test_normalized_writer.py  test_privacy_masking.py  test_question_view_rendering.py  test_questionnaire_definition.py  test_response_models.py  test_static_exporter.py  test_static_html_template.py  test_static_payload_builder.py
(+9 files in other folders)
